--- a/BT3/TachLayout/Views/Shared/_FooterPartial.cshtml
+++ b/BT3/TachLayout/Views/Shared/_FooterPartial.cshtml
@@ -14,6 +14,9 @@
             <a href="#">
                 <img src="images/1311260374_visa-straight.png" alt="Visa" />
             </a>
+             <div style="margin-top:10px;">
+                    <img src="@Model.Logo" alt="Logo Website" style="max-height:80px;" />
+            </div>
         </div>
 
         <div class="footer_right">
