--- a/BT3/TachLayout/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
+++ b/BT3/TachLayout/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
@@ -30,6 +30,9 @@
     <!-- Custom Fonts -->
     <link href="../bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
+
+
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
