--- a/BT3/TachLayout/Areas/Admin/Views/Shared/_NavStaticSide.cshtml
+++ b/BT3/TachLayout/Areas/Admin/Views/Shared/_NavStaticSide.cshtml
@@ -91,6 +91,9 @@
                         <li>
                             <a asp-controller="WebSetting" asp-action="WebSetting">WebSetting</a>
                         </li>
+                        <li>
+                            <a asp-area="Admin" asp-controller="Product" asp-action="Index">Add Product</a>
+                        </li>
                     </ul>
                 </div>
                 <!-- /.sidebar-collapse -->
